Fix Resume sidebar word-wrap

--- a/src/components/ResumeSection/_ResumeSection.scss
+++ b/src/components/ResumeSection/_ResumeSection.scss
@@ -17,8 +17,8 @@
     background: linear-gradient(hsl(208, 100%, 23%), hsl(208, 100%, 18%));
     color: white;
     padding: 0 1rem;
-    width: 200px;
-    word-break: keep-all;
+    min-width: 200px;
+    word-break: break-word;
 
     & * {
       margin: .7em 0;
@@ -26,6 +26,7 @@
     
     & .Resume__sidebar__subtitle {
       font-weight: 400;
+      text-align: left;
     }
     
     & h2:not(.Resume__sidebar__subtitle) {
